--- a/Dockerfile-frontend
+++ b/Dockerfile-frontend
@@ -4,5 +4,5 @@ WORKDIR /app/frontend
 COPY package.json package-lock.json ./
 RUN npm install 
 RUN npm install react-scripts@3.4.1 -g 
-COPY . ./
+# COPY . ./
 EXPOSE 3000
