--- a/Dockerfile-backend
+++ b/Dockerfile-backend
@@ -25,4 +25,4 @@ EXPOSE 8000
 
 # runs the development server
 ENTRYPOINT ["python", "manage.py"]
-CMD ["runserver", "0.0.0.0:8000"]
+CMD ["runserver", "0.0.0.0:$PORT"]
