--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -44,15 +44,15 @@ jobs:
 
     - name: Build and Push Container
       run: |-
-        docker build -t gcr.io/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{  github.sha }} -f Dockerfile-backend ./
-        docker push gcr.io/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{  github.sha }}
+        docker build -t gcr.io/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:latest -f Dockerfile-backend ./
+        docker push gcr.io/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:latest
         
     - name: Deploy to Cloud Run
       id: deploy
       uses: google-github-actions/deploy-cloudrun@v0.4.0
       with:
         service: ${{ env.SERVICE }}
-        image: gcr.io/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{  github.sha }}
+        image: gcr.io/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:latest
         region: ${{ env.REGION }}
 
     - name: Show Output
