--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -46,7 +46,7 @@ jobs:
 
     - name: Build and Push Container
       run: |-
-        docker build -t gcr.io/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:latest -f Dockerfile-backend ./
+        docker build -t gcr.io/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:latest ./
         docker push gcr.io/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:latest
         
     - name: Deploy to Cloud Run
