--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -21,12 +21,8 @@ jobs:
         with:
           node-version: 12
           cache: npm
-          cache-dependency-path: tpsb/frontend/package-lock.json
       - run: npm install
-
-      - name: Build
-        working-directory: tpsb/frontend
-        run: npm run build
+      - run: npm run build
 
       - name: Deploy to Firebase
         uses: FirebaseExtended/action-hosting-deploy@v0
