--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -23,6 +23,8 @@ jobs:
           cache: npm
       - run: npm install
       - run: npm run build
+        env:
+            CI: ""
 
       - name: Deploy to Firebase
         uses: FirebaseExtended/action-hosting-deploy@v0
