--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,7 @@ djangorestframework = "*"
 django-cors-headers = "*"
 requests = "*"
 django-ckeditor = "*"
+django-environ = "*"
 
 [dev-packages]
 
