Change Django theme and improve general usability

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,11 @@
+.firebase/
 .github/
 .vscode/
-*/frontend/
+deliverable*
+node_modules/
+public/
+src/
+.firebaserc
+firebase.json
+package-lock.json
+package.json
