Fix database migrations for tests

--- a/.github/workflows/backend-tests.yml
+++ b/.github/workflows/backend-tests.yml
@@ -38,4 +38,6 @@ jobs:
 
       - name: Run test suite
         run: |
+          pipenv run migrations
+          pipenv run migrate
           pipenv run tests
