--- a/Pipfile
+++ b/Pipfile
@@ -19,4 +19,6 @@ fpdf = "*"
 python_version = "3.9"
 
 [scripts]
-tests = "python3 manage.py test"
+migrations = "python manage.py makemigrations"
+migrate = "python manage.py migrate"
+tests = "python manage.py test"
