--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ requests = "*"
 django-ckeditor = "*"
 django-environ = "*"
 django-admin-interface = "*"
+drf-extensions = "*"
 
 [dev-packages]
 
