Install wkhtmltopdf in github actions

--- a/.github/workflows/backend-tests.yml
+++ b/.github/workflows/backend-tests.yml
@@ -31,10 +31,12 @@ jobs:
           path: ~/.local/share/virtualenvs
           key: ${{ runner.os }}-pipenv-${{ hashFiles('**/Pipfile.lock') }}
 
+      # Installs non-Qt-patched wkhtmltopdf (doesn't support all features)
       - name: Install dependencies
         if: steps.cache-pipenv.outputs.cache-hit != 'true'
         run: |
           pipenv install --deploy --dev
+          sudo apt-get install wkhtmltopdf -y
 
       - name: Run test suite
         run: |
