Lock django-admin-interface version to prevent breakage of fixture

--- a/Pipfile
+++ b/Pipfile
@@ -10,7 +10,7 @@ django-cors-headers = "*"
 requests = "*"
 django-ckeditor = "*"
 django-environ = "*"
-django-admin-interface = "*"
+django-admin-interface = "==0.17.3"
 pdfkit = "*"
 django-singleton-model = "*"
 "pdfminer.six" = "*"
