--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-pdf": "^5.4.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
+    "react-transition-group": "^4.4.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
