--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 REACT_APP_DEPLOYMENT_URL=https://backend-smtcuvoqba-uc.a.run.app
+REACT_APP_ALWAYS_USE_DEPLOYMENT_URL=false
+REACT_APP_DEVELOPMENT_BACKEND_PORT=8000
